# docs/swagger.json
@@ -65,10 +65,10 @@
         "config.Client": {
             "type": "object",
             "required": [
-                "env"
+                "appEnv"
             ],
             "properties": {
-                "env": {
+                "appEnv": {
                     "type": "string",
                     "enum": [
                         "development",
